# Jopmodel

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
extlibs/include/Jopnal/: OS.hpp  Utility.hpp
extlibs/include/Jopnal/Graphics/: Material.hpp
include/: Converter.hpp  Material.hpp  Mesh.hpp  Model.hpp  Texture.hpp
include/jopmodel/: Converter.hpp  FileSystem.hpp  Material.hpp  Mesh.hpp  Model.hpp  Texture.hpp
src/Jopmodel/: Converter.cpp  Material.cpp  Mesh.cpp  Model.cpp  Texture.cpp  main.cpp
src/jopmodel/: FileSystem.cpp  main.cpp
